# ArduinoCore-CMakeBuilder

./: CMakeLists.txt  boards.txt  build-all.sh
